v0.92 - First commit to dev branch!